--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "jupyter>=1.1.1",
     "pytest>=8.4.2",
     "pytest-asyncio>=1.2.0",
+    "pylint>=3.3.8",
 ]
 
 [tool.pytest.ini_options]
