--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "pytest>=8.4.2",
     "pytest-asyncio>=1.2.0",
     "pylint>=3.3.8",
+    "httpx>=0.28.1",
 ]
 
 [tool.pytest.ini_options]
